# typed-descriptors

./: .pylintrc  CONTRIBUTING.md  LICENSE  README.md  README.rst  SECURITY.md  autodoc_typehints.py  mypy.ini  pypi-distrib-upload.bat  run-black.bat  run-tests.bat  setup.cfg  tox.ini
.github/workflows/: python-pytest.yml
docs/: api-toc.rst  conf.py  getting-started.rst  index.rst  make-api.json  requirements.txt
docs/api/: typed_descriptors.attr.rst  typed_descriptors.base.rst  typed_descriptors.prop.rst  typed_descriptors.rst
test/: test_00_base.py  test_01_attr.py  test_02_prop.py  test_10_examples.py
typed_descriptors/: __init__.py  attr.py  base.py  mypy_plugin.py  prop.py
